# markov-agent

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml
.gemini/: settings.json
.gemini/commands/: check_context.toml  commit.toml  research_coder.toml  skill-architect.toml  test.toml  update_context.toml  verify.toml
.gemini/hooks/: ruff_format.sh
.gemini/skills/adk-agents/: SKILL.md
.gemini/skills/adk-agents/references/: custom-agents.md  llm-agents.md  workflow-agents.md
.gemini/skills/adk-artifacts/: SKILL.md
.gemini/skills/adk-artifacts/references/: artifacts.md
.gemini/skills/adk-callbacks/: SKILL.md
.gemini/skills/adk-callbacks/references/: hooks.md
.gemini/skills/adk-context/: SKILL.md
.gemini/skills/adk-deploy/: SKILL.md
.gemini/skills/adk-evaluate/: SKILL.md
.gemini/skills/adk-events/: SKILL.md
.gemini/skills/adk-grounding/: SKILL.md
.gemini/skills/adk-integrations/: SKILL.md
.gemini/skills/adk-mcp/: SKILL.md
.gemini/skills/adk-observability/: SKILL.md
.gemini/skills/adk-plugins/: SKILL.md
.gemini/skills/adk-runtime/: SKILL.md
.gemini/skills/adk-safety/: SKILL.md
.gemini/skills/adk-sessions/: SKILL.md
.gemini/skills/adk-streaming/: SKILL.md
.gemini/skills/adk-tools/: SKILL.md
docs/adk_deep_dive/: google_adk_overview.md
docs/architecture/: overview.md
docs/guides/: building_coding_agents.md  compositional_patterns.md  deliberative_logic.md  deployment.md  fluent_api.md  getting_started.md  markovian_probabilistic_routing.md  reliability_engineering.md  topology_engineering.md
examples/: adaptive_systems_demo.py  code_improver_agent.py  company_digital_twin.py  complex_local_agent.py  complex_metrics_test.py  complex_reliability_agent.py  dashboard_demo.py  debate_team.py  deep_research_agent.py  local_llm_test.py  pipeline_demo.py  safety_demo.py  streaming_demo.py  system2_governance_demo.py  topology_analysis_demo.py  weather_bot_tutorial.py
examples/adk_server_example/: agent.py
examples/adk_server_example/.adk/: session.db
examples/agents/: advanced_coding_agent.py  code_improver_agent.py  complex_local_agent.py  complex_reliability_agent.py  debate_team.py  deep_research_agent.py  event_handling_example.py  gemini_3_flash_example.py  hierarchical_report_generator.py  research_agent_demo.py  research_coding_agent_demo.py
examples/callbacks/: complex_safety.py  local_complex_safety.py  safety_callbacks_demo.py
examples/deployment/: Dockerfile  deploy_vertex.py  main.py  requirements.txt
examples/deployment/app/: agent.py
examples/diagnostics/: complex_metrics_test.py  local_llm_test.py  observability_demo.py  simulation_metrics_demo.py  transition_matrix_demo.py
examples/plugins/: custom_logging_plugin.py
examples/runtime/: web_server_demo.py
src/markov_agent/: __init__.py  reliability.py
src/markov_agent/containers/: chain.py  loop.py  nested.py  parallel.py  self_correction.py  sequential.py  swarm.py
src/markov_agent/core/: events.py  logging.py  monitoring.py  probability.py  registry.py  services.py  state.py
src/markov_agent/engine/: adk_wrapper.py  agent.py  callback_adapter.py  callbacks.py  diversity.py  eig.py  logging_plugin.py  mcts.py  nodes.py  observability.py  plugins.py  ppu.py  prompt.py  runtime.py  sampler.py  selectors.py  telemetry_plugin.py  token_utils.py  trajectory.py  workflow.py
src/markov_agent/evaluation/: harness.py
src/markov_agent/governance/: cost.py  resource.py
src/markov_agent/simulation/: analysis.py  batch.py  dashboard.py  metrics.py  runner.py  scenario.py  twin.py
src/markov_agent/tools/: __init__.py  agent_tool.py  database.py  mcp.py  search.py
src/markov_agent/topology/: analysis.py  edge.py  evolution.py  gate.py  graph.py  node.py  router.py
tests/: conftest.py  test_adk_config.py  test_complex_adk.py  test_containers.py  test_containers_extended.py  test_core.py  test_database_tool.py  test_extended_config.py  test_parallel.py  test_ppu.py  test_ppu_retry.py  test_ppu_selector.py  test_prompt.py  test_sampling_strategy.py  test_simulation.py  test_simulation_advanced.py  test_telemetry.py  test_tools.py  test_topology.py  test_topology_advanced.py
tests/containers/: test_containers.py  test_containers_extended.py  test_parallel.py
tests/core/: test_logging.py  test_shared_services.py
tests/engine/: test_adk_config.py  test_adk_events.py  test_adk_reduction_llm.py  test_adk_repair.py  test_advanced_search.py  test_agent_api.py  test_artifacts.py  test_callbacks.py  test_context_features.py  test_diversity_features.py  test_extended_config.py  test_nodes.py  test_observability.py  test_plugins.py  test_ppu_extended.py  test_ppu_grounding_code.py  test_ppu_retry.py  test_ppu_verifier.py  test_prompt.py  test_reasoning.py  test_runtime.py  test_sampling_strategy.py  test_selectors.py  test_sessions_memory.py  test_streaming.py  test_system2.py  test_telemetry.py  test_token_reduction.py  test_trajectory.py  test_verified_agent.py  test_workflow.py
tests/evaluation/: test_harness.py
tests/examples/: test_company_digital_twin.py  test_complex_safety_example.py
tests/examples_tests/: test_complex_safety_example.py
tests/governance/: test_cost_governor.py  test_resource_governor.py
tests/integration/: test_artifact_integration.py  test_complex_adk.py  test_complex_workflow.py  test_deep_reliability.py  test_integration_extended.py  test_neuro_symbolic.py  test_state_resilience.py
tests/simulation/: test_complex_simulations.py  test_dashboard.py  test_simulation.py  test_simulation_advanced.py  test_trajectory_diversity.py
tests/tools/: test_database_tool.py  test_mcp_extended.py  test_tool_decorator.py  test_tools.py  test_tools_extended.py
tests/topology/: test_advanced_analysis.py  test_advanced_fluent_features.py  test_advanced_markov.py  test_complex_fluent.py  test_fluent_api.py  test_fluent_improvements.py  test_gate.py  test_graph_dict_schema.py  test_graph_safeguards.py  test_markov_chains.py  test_markov_refactor.py  test_stress_topologies.py  test_topology.py  test_topology_advanced.py
(+19 files in other folders)
