[project]
name = "markov-agent"
version = "0.1.0"
description = "A topology-based probabilistic control system using Google ADK."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.1.0",           # The Agent Engine
    "pydantic>=2.7.0",             # The Structure
    "tenacity>=8.2.0",             # Retry logic
    "jinja2>=3.1.0",               # Prompt Templating
    "numpy>=1.26.0",               # Math/Stats for simulation
    "rich>=13.0.0",                # Terminal visualization
    "litellm>=1.80.13",
    "sqlalchemy>=2.0.45",
    "httpx>=0.28.1",
    "mcp>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",                 # The Linter & Formatter
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"] # pycodestyle, pyflakes, isort, bugbear, pyupgrade
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
