[project]
name = "markov-agent"
version = "0.1.0"
description = "A topology-based probabilistic control system using Google ADK."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.24.1",           # The Agent Engine
    "pydantic>=2.12.5",             # The Structure
    "tenacity>=9.1.4",              # Retry logic
    "jinja2>=3.1.6",                # Prompt Templating
    "numpy>=2.4.2",                # Math/Stats for simulation
    "pandas>=2.2.3",               # Data analysis for simulation
    "rich>=14.3.2",                # Terminal visualization
    "litellm>=1.81.8",
    "sqlalchemy>=2.0.45",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "psutil>=7.2.2",
    "json-repair>=0.57.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:.*is experimental and may change or be removed.*:UserWarning",
    "ignore:.*'_UnionGenericAlias' is deprecated.*:DeprecationWarning",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",                 # The Linter & Formatter
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D203",   # one-blank-line-before-class (incompatible with D211)
    "D213",   # multi-line-summary-second-line (incompatible with D212)
    "ANN204", # Missing return type annotation for special method
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "S101",   # Use of assert detected (needed for tests)
    "PLR2004",# Magic value used in comparison
    "PLR0912",# Too many branches
    "PLR0913",# Too many arguments in function definition
    "PLR0915",# Too many statements
    "C901",   # Complexity
    "ARG005", # Unused lambda argument
    "PLC0415",# Import should be at the top-level
    "BLE001", # Do not catch blind exception
    "COM812", # Trailing comma missing (handled by formatter)
    "E501",   # Line too long
    "INP001", # Implicit namespace package
    "SLF001", # Private member accessed
    "ARG002", # Unused method argument
    "N806",   # Variable name should be lowercase
    "PGH003", # Use specific rule codes when ignoring type issues
]

extend-select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "S", "PLR", "ARG", "FBT", "SLF"]
"examples/*" = ["ANN", "D", "T201", "PLR", "ARG", "FBT", "BLE", "PTH", "S", "TRY", "EM", "PERF", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
